feat(test): add comprehensive test infrastructure
- Add test target to both bmake.mk and gmake.mk Makefiles
- Add test-related artifacts to .gitignore (excluding DLLs/shared libs)
- Create test directory with cross-platform Makefiles (bmake.mk, gmake.mk)
- Implement cross-platform test program with signal handling (test.c)
- Add test module source for compilation (test_mod.c)
- Set up automated test environment with mods/ directory
- Support both POSIX and Windows platforms

The test infrastructure allows running integration tests via 'make test'
and demonstrates stk library functionality with dynamic module loading.
Generated DLLs/shared libraries are excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ dkms.conf
 obj/
 bin/
 
+# Test directories
+test/mods/
+test/test_program*
+test/test_mod.so
+test/test_mod.dylib
+test/test_mod.dll
